...
            VStack(spacing: 0) {
                HStack(spacing: 12) {
                    HStack {
                        TextField("Menu Item", text: $searchQuery)
                            .autocorrectionDisabled()
                            .padding()
                            .accessibilityIdentifier("menuItemSearchQueryTextField")
                        if !searchQuery.isEmpty {
                            Button(action: {
                                searchQuery = ""
                            }) {
                                Image(systemName: "xmark.circle.fill")
                                    .foregroundStyle(.secondary)
                                    .padding(.trailing)
                            }
                            .accessibilityIdentifier("clearSearchField")
                        }
                    }
                    .background(Color(.secondarySystemGroupedBackground))
                    .cornerRadius(10)
                    
                    Button(action: { randomiseServingSizeUUIDs() }) {
...
